Comments Pt. 1 added

--- a/CS460-MovieRec.ipynb
+++ b/CS460-MovieRec.ipynb
@@ -6,9 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import the pandas library for dataframe use\n",
     "import pandas as pd\n",
     "\n",
-    "# https://files.grouplens.org/datasets/movielens/ml-25m.zip\n",
+    "# the link that can be used to see datasets movies.csv and ratings.csv once downloaded and extracted from the zip file\n",
+    "# https://files.grouplens.org/datasets/movielens/ml-25m.zip \n",
+    "\n",
+    "\n",
+    "# loads the data of the csv files into a dataframe\n",
     "movieData = pd.read_csv(\"movies.csv\")\n",
     "ratingData = pd.read_csv(\"ratings.csv\")\n",
     "\n"
@@ -55,6 +60,7 @@
     }
    ],
    "source": [
+    "# this will remove any duplicate values from the data frame\n",
     "remove_dup = remove_dup.drop_duplicates()\n",
     "remove_dup.duplicated().sum()"
    ]
@@ -147,6 +153,7 @@
     }
    ],
    "source": [
+    "# returns the first n rows of the dataframe -- default is 5 rows\n",
     "movieData.head()"
    ]
   },
@@ -158,6 +165,7 @@
    "source": [
     "import re\n",
     "\n",
+    "# cleans the title string of any character other than a letter (lowercase or uppercase), space, or number \n",
     "def cleanTitle(title):\n",
     "    title = re.sub(\"[^a-zA-Z0-9 ]\", \"\", title)\n",
     "    return title"
@@ -169,6 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# adding a cleanTitle column to display the cleanTitle() function in action\n",
     "movieData[\"cleanTitle\"] = movieData[\"title\"].apply(cleanTitle)"
    ]
   },
@@ -336,6 +345,7 @@
     }
    ],
    "source": [
+    "# The cleanTitle() function took out the parentheses from the original title strings\n",
     "movieData"
    ]
   },
