Comments Pt. 2 Done

--- a/CS460-MovieRec.ipynb
+++ b/CS460-MovieRec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "10"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "0"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "4                                       Comedy  "
       ]
      },
-     "execution_count": 236,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "[62423 rows x 4 columns]"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,66 +351,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creates the tfidf matrix\n",
+    "# computers can't understand characters, they understand numbers\n",
+    "# converting movie titles into set of numbers so that our machines can search and find them\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "vectorizer = TfidfVectorizer(ngram_range=(1,2))\n",
+    "vectorizer = TfidfVectorizer(ngram_range=(1,2))     # initialize the class\n",
+    "# ngram argument will find groups of two words that are consecutive- makes search accurate\n",
     "\n",
+    "\n",
+    "# turn set of titles which are now numbers into a matrix\n",
     "tfidf = vectorizer.fit_transform(movieData[\"cleanTitle\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import numpy as np\n",
     "\n",
+    "# compute the similarity between a term we enter and all the movies in the list\n",
     "def search(title):\n",
-    "    title = cleanTitle(title)\n",
-    "    query_vec = vectorizer.transform([title])\n",
-    "    similarity = cosine_similarity(query_vec, tfidf).flatten()\n",
-    "    indices = np.argpartition(similarity, -5)[-5:]\n",
-    "    results = movieData.iloc[indices].iloc[::-1]\n",
+    "    title = cleanTitle(title)   # the term is the title we search for - we clean the term by using cleanTitle function\n",
+    "    query_vec = vectorizer.transform([title])   # use the vectorizer to turn the search term we entered into a set of numbers\n",
+    "    similarity = cosine_similarity(query_vec, tfidf).flatten()  # compare our query term to each of the clean movie titles we have in the dataset, returns how similar the title is \n",
+    "    indices = np.argpartition(similarity, -5)[-5:] # five most similar search terms\n",
+    "    results = movieData.iloc[indices].iloc[::-1]    # returns the titles at those indices\n",
     "    \n",
-    "    return results"
+    "    return results  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_similar_movies(movie_id):\n",
-    "    similar_users = ratingData[(ratingData[\"movieId\"] == movie_id) & (ratingData[\"rating\"] > 4)][\"userId\"].unique()\n",
-    "    similar_user_recs = ratingData[(ratingData[\"userId\"].isin(similar_users)) & (ratingData[\"rating\"] > 4)][\"movieId\"]\n",
-    "    similar_user_recs = similar_user_recs.value_counts() / len(similar_users)\n",
+    "    similar_users = ratingData[(ratingData[\"movieId\"] == movie_id) & (ratingData[\"rating\"] > 4)][\"userId\"].unique() # find anyone who likes the movie you inputted and gave it a rating > 4 -- similar tastes to you -- only taking unique userId\n",
+    "    similar_user_recs = ratingData[(ratingData[\"userId\"].isin(similar_users)) & (ratingData[\"rating\"] > 4)][\"movieId\"]  # find the other movies that these similar_users liked \n",
+    "    similar_user_recs = similar_user_recs.value_counts() / len(similar_users)   # find what percentage of users recommend the movie\n",
     "\n",
-    "    similar_user_recs = similar_user_recs[similar_user_recs > .10]\n",
-    "    all_users = ratingData[(ratingData[\"movieId\"].isin(similar_user_recs.index)) & (ratingData[\"rating\"] > 4)]\n",
-    "    all_user_recs = all_users[\"movieId\"].value_counts() / len(all_users[\"userId\"].unique())\n",
+    "    similar_user_recs = similar_user_recs[similar_user_recs > .10]  # only select the ones greater than 10 percent liked\n",
+    "    all_users = ratingData[(ratingData[\"movieId\"].isin(similar_user_recs.index)) & (ratingData[\"rating\"] > 4)]  \n",
+    "    all_user_recs = all_users[\"movieId\"].value_counts() / len(all_users[\"userId\"].unique()) # what percentage of all_users (outside of our set of people similar to us) like this movie\n",
     "    rec_percentages = pd.concat([similar_user_recs, all_user_recs], axis=1)\n",
     "    rec_percentages.columns = [\"similar\", \"all\"]\n",
     "    \n",
-    "    rec_percentages[\"score\"] = rec_percentages[\"similar\"] / rec_percentages[\"all\"]\n",
-    "    rec_percentages = rec_percentages.sort_values(\"score\", ascending=False)\n",
-    "    return rec_percentages.head(10).merge(movieData, left_index=True, right_on=\"movieId\")[[\"score\", \"title\", \"genres\"]]\n",
+    "    rec_percentages[\"score\"] = rec_percentages[\"similar\"] / rec_percentages[\"all\"]  # create a score (dividing similar by all)\n",
+    "    rec_percentages = rec_percentages.sort_values(\"score\", ascending=False) # sort the recommendations\n",
+    "    return rec_percentages.head(10).merge(movieData, left_index=True, right_on=\"movieId\")[[\"score\", \"title\", \"genres\"]]     # make list pretty\n",
     "\n",
     "def userInput():\n",
-    "    # User input\n",
+    "    # user input\n",
     "    search_value = input(\"Movie Name: \")\n",
     "\n",
-    "    # Search for the value in the first column\n",
+    "    # search for the value in the first column\n",
     "    column_name = 'title'\n",
     "    mask = movieData[column_name] == search_value\n",
     "    result = movieData.loc[mask]\n",
     "\n",
-    "    # Retrieve the value of the second column for each matching row\n",
+    "    # retrieve the value of the second column for each matching row\n",
     "    column_name2 = 'movieId'\n",
     "    movie_id = result[column_name2].values[0]\n",
     "    return movie_id\n",
@@ -420,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -451,96 +459,96 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>57.008249</td>\n",
-       "      <td>Jumanji (1995)</td>\n",
-       "      <td>Adventure|Children|Fantasy</td>\n",
+       "      <th>0</th>\n",
+       "      <td>8.017414</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>18.757121</td>\n",
-       "      <td>Casper (1995)</td>\n",
-       "      <td>Adventure|Children</td>\n",
+       "      <th>3021</th>\n",
+       "      <td>5.225654</td>\n",
+       "      <td>Toy Story 2 (1999)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>313</th>\n",
-       "      <td>14.880390</td>\n",
-       "      <td>Santa Clause, The (1994)</td>\n",
-       "      <td>Comedy|Drama|Fantasy</td>\n",
+       "      <th>2264</th>\n",
+       "      <td>4.405452</td>\n",
+       "      <td>Bug's Life, A (1998)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>578</th>\n",
-       "      <td>9.382034</td>\n",
-       "      <td>Home Alone (1990)</td>\n",
-       "      <td>Children|Comedy</td>\n",
+       "      <th>14813</th>\n",
+       "      <td>4.354038</td>\n",
+       "      <td>Toy Story 3 (2010)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy|IMAX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>8.711980</td>\n",
-       "      <td>Mrs. Doubtfire (1993)</td>\n",
-       "      <td>Comedy|Drama</td>\n",
+       "      <th>4780</th>\n",
+       "      <td>3.320783</td>\n",
+       "      <td>Monsters, Inc. (2001)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>8.666058</td>\n",
-       "      <td>Mask, The (1994)</td>\n",
-       "      <td>Action|Comedy|Crime|Fantasy</td>\n",
+       "      <th>580</th>\n",
+       "      <td>3.208539</td>\n",
+       "      <td>Aladdin (1992)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Musical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2526</th>\n",
-       "      <td>7.959267</td>\n",
-       "      <td>Mummy, The (1999)</td>\n",
-       "      <td>Action|Adventure|Comedy|Fantasy|Horror|Thriller</td>\n",
+       "      <th>6258</th>\n",
+       "      <td>3.156862</td>\n",
+       "      <td>Finding Nemo (2003)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>721</th>\n",
-       "      <td>7.539414</td>\n",
-       "      <td>Twister (1996)</td>\n",
-       "      <td>Action|Adventure|Romance|Thriller</td>\n",
+       "      <th>587</th>\n",
+       "      <td>2.991150</td>\n",
+       "      <td>Beauty and the Beast (1991)</td>\n",
+       "      <td>Animation|Children|Fantasy|Musical|Romance|IMAX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>579</th>\n",
-       "      <td>6.375923</td>\n",
-       "      <td>Ghost (1990)</td>\n",
-       "      <td>Comedy|Drama|Fantasy|Romance|Thriller</td>\n",
+       "      <th>8246</th>\n",
+       "      <td>2.972889</td>\n",
+       "      <td>Incredibles, The (2004)</td>\n",
+       "      <td>Action|Adventure|Animation|Children|Comedy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>312</th>\n",
-       "      <td>6.231007</td>\n",
-       "      <td>Stargate (1994)</td>\n",
-       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <th>359</th>\n",
+       "      <td>2.954762</td>\n",
+       "      <td>Lion King, The (1994)</td>\n",
+       "      <td>Adventure|Animation|Children|Drama|Musical|IMAX</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          score                     title  \\\n",
-       "1     57.008249            Jumanji (1995)   \n",
-       "156   18.757121             Casper (1995)   \n",
-       "313   14.880390  Santa Clause, The (1994)   \n",
-       "578    9.382034         Home Alone (1990)   \n",
-       "495    8.711980     Mrs. Doubtfire (1993)   \n",
-       "362    8.666058          Mask, The (1994)   \n",
-       "2526   7.959267         Mummy, The (1999)   \n",
-       "721    7.539414            Twister (1996)   \n",
-       "579    6.375923              Ghost (1990)   \n",
-       "312    6.231007           Stargate (1994)   \n",
+       "          score                        title  \\\n",
+       "0      8.017414             Toy Story (1995)   \n",
+       "3021   5.225654           Toy Story 2 (1999)   \n",
+       "2264   4.405452         Bug's Life, A (1998)   \n",
+       "14813  4.354038           Toy Story 3 (2010)   \n",
+       "4780   3.320783        Monsters, Inc. (2001)   \n",
+       "580    3.208539               Aladdin (1992)   \n",
+       "6258   3.156862          Finding Nemo (2003)   \n",
+       "587    2.991150  Beauty and the Beast (1991)   \n",
+       "8246   2.972889      Incredibles, The (2004)   \n",
+       "359    2.954762        Lion King, The (1994)   \n",
        "\n",
-       "                                               genres  \n",
-       "1                          Adventure|Children|Fantasy  \n",
-       "156                                Adventure|Children  \n",
-       "313                              Comedy|Drama|Fantasy  \n",
-       "578                                   Children|Comedy  \n",
-       "495                                      Comedy|Drama  \n",
-       "362                       Action|Comedy|Crime|Fantasy  \n",
-       "2526  Action|Adventure|Comedy|Fantasy|Horror|Thriller  \n",
-       "721                 Action|Adventure|Romance|Thriller  \n",
-       "579             Comedy|Drama|Fantasy|Romance|Thriller  \n",
-       "312                           Action|Adventure|Sci-Fi  "
+       "                                                 genres  \n",
+       "0           Adventure|Animation|Children|Comedy|Fantasy  \n",
+       "3021        Adventure|Animation|Children|Comedy|Fantasy  \n",
+       "2264                Adventure|Animation|Children|Comedy  \n",
+       "14813  Adventure|Animation|Children|Comedy|Fantasy|IMAX  \n",
+       "4780        Adventure|Animation|Children|Comedy|Fantasy  \n",
+       "580         Adventure|Animation|Children|Comedy|Musical  \n",
+       "6258                Adventure|Animation|Children|Comedy  \n",
+       "587     Animation|Children|Fantasy|Musical|Romance|IMAX  \n",
+       "8246         Action|Adventure|Animation|Children|Comedy  \n",
+       "359     Adventure|Animation|Children|Drama|Musical|IMAX  "
       ]
      },
-     "execution_count": 243,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
