--- a/CS460-MovieRec.ipynb
+++ b/CS460-MovieRec.ipynb
@@ -36,33 +36,15 @@
     }
    ],
    "source": [
-    "# another way to clean the data is by dropping any duplicate values from the data frame\n",
-    "# will not do this on the actual dataset we are implementing our movie rec system on, but it is for future consideration\n",
-    "\n",
-    "remove_dup = movieData.append(movieData.iloc[20:30,:])    # this line appends similar rows to that of the dataframe\n",
-    "remove_dup.duplicated().sum()                       # outputs number of duplicate values \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# this will remove any duplicate values from the data frame\n",
-    "remove_dup = remove_dup.drop_duplicates()\n",
-    "remove_dup.duplicated().sum()"
+    "def removeDuplicates(movieData):\n",
+    "    # another way to clean the data is by dropping any duplicate values from the data frame\n",
+    "    # will not do this on the actual dataset we are implementing our movie rec system on, but it is for future consideration\n",
+    "    remove_dup = movieData.append(movieData.iloc[20:30,:])    # this line appends similar rows to that of the dataframe\n",
+    "    remove_dup.duplicated().sum()                       # outputs number of duplicate values \n",
+    "    \n",
+    "    # this will remove any duplicate values from the data frame\n",
+    "    remove_dup = remove_dup.drop_duplicates()\n",
+    "    remove_dup.duplicated().sum()"
    ]
   },
   {
@@ -554,7 +536,8 @@
     }
    ],
    "source": [
-    "movie_id = userInput()\n",
+    "movie_id = userInput()  # returns movie_id for find_similar_movies function\n",
+    "\n",
     "# Find movie recommendations given the movie you inputted\n",
     "find_similar_movies(movie_id)"
    ]
